--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "semantic-ui-react": "^0.83.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start:dev": "REACT_APP_ENV=development react-scripts start",
+    "start:prod": "REACT_APP_ENV=production react-scripts start",
+    "start:staging": "REACT_APP_ENV=staging react-scripts start",
+    "start:beta": "REACT_APP_ENV=beta react-scripts start",
+    "build:dev": "REACT_APP_ENV=development react-scripts build",
+    "build:prod": "REACT_APP_ENV=production react-scripts build",
+    "build:staging": "REACT_APP_ENV=staging react-scripts build",
+    "build:beta": "REACT_APP_ENV=beta react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "flow": "flow"
@@ -27,7 +33,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "9.0.0",
     "prettier-eslint": "^8.8.2"
   }
 }
