--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,26 @@
 {
-  "parser": "babel-eslint",
   "extends": "airbnb",
-  "plugins": ["react", "jsx-ally", "import"]
+  "rules": {
+    "no-console": "warn",
+    "comma-dangle": ["error", "never"],
+    "no-unused-vars": [
+      "error",
+      {
+        "vars": "local",
+        "args": "none"
+      }
+    ],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", ".jsx"]
+      }
+    ],
+    "react/prefer-stateless-function": [
+      0,
+      {
+        "ignorePureComponents": true
+      }
+    ]
+  }
 }
