--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
   ],
   "devDependencies": {
     "babel-eslint": "9.0.0",
-    "prettier-eslint": "^8.8.2"
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
+    "prettier-eslint": "8.8.2"
   }
 }
